// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested-table-transform transformNestedTablesIncomingDocument should clear the node if nested table extension is missing nestedContent 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`nested-table-transform transformNestedTablesIncomingDocument should transform nested table extension to nested table 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "Header 1",
                          "type": "text",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    {
                      "content": [
                        {
                          "text": "Header 2",
                          "type": "text",
                        },
                      ],
                      "type": "tableHeader",
                    },
                  ],
                  "type": "tableRow",
                },
                {
                  "content": [
                    {
                      "content": [
                        {
                          "text": "Cell 1",
                          "type": "text",
                        },
                      ],
                      "type": "tableCell",
                    },
                    {
                      "content": [
                        {
                          "text": "Cell 2",
                          "type": "text",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
              ],
              "type": "table",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
